feat(slow-query): support slow query search by resource group (#1646)
